@@ -38,6 +38,7 @@ Post-v2.7.0
        abbreviated to 4 hex digits.
      * "ovn-sbctl lflow-list" can now print OpenFlow flows that correspond
        to logical flows.
+     * Now uses OVSDB RBAC support to reduce impact of compromised hypervisors.
    - OVSDB:
      * New support for role-based access control (see ovsdb-server(1)).
    - Add the command 'ovs-appctl stp/show' (see ovs-vswitchd(8)).
